resources/deployment/kubernetes/01_msr-purchase-order_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: purchase-order
  name: purchase-order
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 60
  selector:
    matchLabels:
      app: purchase-order
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app: purchase-order
    spec:
      containers:
        - image: staillansag/msr-dec-purchase-order:poc-0.0.3
          imagePullPolicy: Always
          name: purchase-order-msr
          ports:
            - name: metrics
              containerPort: 5555
          livenessProbe:
            tcpSocket:
              port: 5555
            initialDelaySeconds: 180
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 5555
            initialDelaySeconds: 15
            periodSeconds: 15
            failureThreshold: 12
