resources/deployment/kubernetes/02_msr-purchase-order_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msr-purchase-order
  labels:
    name: msr-purchase-order
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5555
  selector:
    app: purchase-order
