resources/deployment/kubernetes/99_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: purchase-order-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - decorders.sttlab.eu
    secretName: aks-tls
  rules:
  - host: "decorders.sttlab.eu"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: msr-purchase-order
              port:
                number: 80
